k3s/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  namespace: mediamaven
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: tvshows
              mountPath: /tvshows
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              memory: "512Mi"   # Minimum amount of memory the container needs
              cpu: "500m"       # Minimum amount of CPU the container needs
            limits:
              memory: "1Gi"   # Maximum memory the container can use
              cpu: "1"       # Maximum CPU the container can use
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: pvc-sonarr-config  # You can define a PVC if necessary
        - name: tvshows
          persistentVolumeClaim:
            claimName: pvc-tv-shows
        - name: downloads
          persistentVolumeClaim:
            claimName: pvc-torrents
            readOnly: true
