k3s/sonarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: mediamaven
  labels:
    app: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
      name: sonarr
