k3s/sonarr/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sonarr-stripprefix
  namespace: mediamaven
spec:
  stripPrefix:
    prefixes:
      - /sonarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: mediamaven
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /sonarr
        pathType: Prefix
        backend:
          service:
            name: sonarr-service
            port:
              number: 8989
